dbGaP data summary text and short name for data dashboard. Added consent group short code and terra workspace expansion panel. Resolves #339.

--- a/src/components/data-study-card-header/data-study-card-header.module.css
+++ b/src/components/data-study-card-header/data-study-card-header.module.css
@@ -2,55 +2,79 @@
  * The AnVIL
  * https://www.anvilproject.org
  *
- * Style definitions specific to The AnVIL data study component.
+ * Style definitions specific to The AnVIL data study card header component.
  */
 
-/* Study - name. */
-.study .name {
+/* Card header - container. */
+.snapshot {
+    border-left: 1px solid var(--shade-light-green);
+    border-right: 1px solid var(--shade-light-green);
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    padding: 16px 16px 0;
+}
+
+/* Title. */
+.title {
     color: var(--shade-dark);
     display: flex;
     flex-wrap: wrap;
-    font-family: "Open Sans", sans-serif;
-    font-size: 16px;
-    font-weight: 600;
+    margin: 0 0 12px;
+}
+
+/* Group. */
+.group {
     padding: 8px 0;
 }
 
-/* Study - quick view - study summary items. */
-.study .quickView {
+/* Row. */
+.row {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
 }
 
-/* Study - font styles. */
-.study span {
+/* Font styles. */
+.snapshot span {
     color: var(--accent-blue-dark);
     display: inline-block;
     font-family: "Barlow", sans-serif;
     font-size: 14px;
-    font-weight: 400;
     line-height: 24px;
     white-space: pre-wrap;
 }
 
-/* Study - label. */
-.study .label {
+/* Label. */
+.snapshot .label {
     font-family: "Open Sans", sans-serif;
     font-weight: 600;
-    margin-top: 4px;
+    flex: none;
+}
+
+/* Value. */
+.snapshot .value {
+    font-weight: 400;
 }
 
 /* Link. */
-.study .link {
+.snapshot .link {
     color: var(--primary);
     cursor: pointer;
 }
 
+/* Error. */
+.snapshot .error {
+    color: #b10062;
+}
+
+/* Consent. */
+.snapshot .consent {
+    margin-right: 8px;
+}
+
 /* Divider. */
-.study .divide {
+.divide {
     border-bottom: 1px solid var(--shade-light-green);
-    margin-bottom: 8px;
-    padding-bottom: 8px;
 }
 
 /**
@@ -59,17 +83,17 @@
  */
 @media screen and (min-width: 720px) {
 
-    /* Study - quick view - study summary items. */
-    .study .quickView {
+    /* Row. */
+    .row {
         flex-direction: row;
     }
 
-    /* Study - label. */
-    .study .label {
+    /* Label. */
+    .snapshot .label {
         margin: 0 8px 0 0;
     }
 
-    .study .label:not(:first-of-type) {
+    .snapshot .label:not(:first-of-type) {
        margin-left: 16px;
     }
 }
