--- a/src/components/tooltip/tooltip.module.css
+++ b/src/components/tooltip/tooltip.module.css
@@ -23,7 +23,6 @@
     position: fixed;
     transition: opacity 400ms cubic-bezier(0.25, 0.8, 0.25, 1);
     visibility: hidden;
-    white-space: nowrap;
 }
 
 /* Tooltip - show */
